==> rosmo/m5paper-ovstops/components/LovyanGFX/src/lgfx/v1/platforms/samd51/common.cpp <==
#include "common.hpp"
#define _Ul(n) (static_cast<uint32_t>((n)))
#define PORT_PINCFG_INEN_Pos        1            /**< \brief (PORT_PINCFG) Input Enable */
#define PORT_PINCFG_INEN            (_Ul(0x1) << PORT_PINCFG_INEN_Pos)
#define PORT_PINCFG_PULLEN_Pos      2            /**< \brief (PORT_PINCFG) Pull Enable */
#define PORT_PINCFG_PULLEN          (_Ul(0x1) << PORT_PINCFG_PULLEN_Pos)

  void pinMode(int_fast16_t pin, pin_mode_t mode)
  {
    uint32_t port = pin >> samd51::PORT_SHIFT;
    pin &= samd51::PIN_MASK;
    uint32_t pinMask = (1ul << pin);

    // Set pin mode according to chapter '22.6.3 I/O Pin Configuration'
    switch ( mode )
    {
      case pin_mode_t::input:
        // Set pin to input mode
        PORT->Group[port].PINCFG[pin].reg=(uint8_t)(PORT_PINCFG_INEN) ;
        PORT->Group[port].DIRCLR.reg = pinMask ;
      break ;

      case pin_mode_t::input_pullup:
        // Set pin to input mode with pull-up resistor enabled
        PORT->Group[port].PINCFG[pin].reg=(uint8_t)(PORT_PINCFG_INEN|PORT_PINCFG_PULLEN) ;
        PORT->Group[port].DIRCLR.reg = pinMask ;

        // Enable pull level (cf '22.6.3.2 Input Configuration' and '22.8.7 Data Output Value Set')
        PORT->Group[port].OUTSET.reg = pinMask ;
      break ;

      case pin_mode_t::input_pulldown:
        // Set pin to input mode with pull-down resistor enabled
        PORT->Group[port].PINCFG[pin].reg=(uint8_t)(PORT_PINCFG_INEN|PORT_PINCFG_PULLEN) ;
        PORT->Group[port].DIRCLR.reg = pinMask ;

        // Enable pull level (cf '22.6.3.2 Input Configuration' and '22.8.6 Data Output Value Clear')
        PORT->Group[port].OUTCLR.reg = pinMask ;
      break ;

      case pin_mode_t::output:
        // enable input, to support reading back values, with pullups disabled
        PORT->Group[port].PINCFG[pin].reg=(uint8_t)(PORT_PINCFG_INEN) ;

        // Set pin to output mode
        PORT->Group[port].DIRSET.reg = pinMask ;
      break ;

      default:
        // do nothing
      break ;
    }
  }

    cpp::result<void, error_t> init(int sercom_index, int pin_sclk, int pin_miso, int pin_mosi)
    {
      if ((size_t)sercom_index >= SERCOM_INST_NUM) { return cpp::fail(error_t::invalid_arg); }

      int dopo = -1;
      int dipo = -1;

// Serial.printf("sercom:%d sclk:%d  mosi:%d  miso:%d \r\n", sercom_index, pin_sclk, pin_mosi, pin_miso);
      for (int alt = 0; alt < 2; ++alt)
      {
        int pad_sclk = getPadNumber(sercom_index, pin_sclk, alt);
        int pad_mosi = getPadNumber(sercom_index, pin_mosi, alt);
        dipo         = getPadNumber(sercom_index, pin_miso, alt);
        if (pad_sclk == 1)
        {
          if (     pad_mosi == 0) dopo = 0;
          else if (pad_mosi == 3) dopo = 2;
        }
        if (dopo >= 0)
        {
          pinAssignPeriph(pin_sclk, alt ? PIO_SERCOM_ALT : PIO_SERCOM);
          pinAssignPeriph(pin_mosi, alt ? PIO_SERCOM_ALT : PIO_SERCOM);
          if (dipo >= 0)
          {
            pinAssignPeriph(pin_miso, alt ? PIO_SERCOM_ALT : PIO_SERCOM);
          }
          break;
        }
// Serial.printf("pad sclk:%d / pad mosi:%d alt:%d\r\n", pad_sclk, pad_mosi, alt);
// Serial.printf("pad dipo:%d \r\n", dipo);
      }
      if (dopo < 0) { return cpp::fail(error_t::invalid_arg); }
      if (dipo < 0) dipo = 0;

      auto sercom_data = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercom_data->sercomPtr);

      auto *spi = &sercom->SPI;
      while (spi->SYNCBUSY.bit.ENABLE); //Waiting then enable bit from SYNCBUSY is equal to 0;
      spi->CTRLA.bit.ENABLE = 0;        //Setting the enable bit to 0

      resetSPI(spi);

#if defined(__SAMD51__)
auto mastermode = SERCOM_SPI_CTRLA_MODE(0x3);
#else
auto mastermode = SERCOM_SPI_CTRLA_MODE_SPI_MASTER;
#endif

      //Setting the CTRLA register
      spi->CTRLA.reg = mastermode
                     | SERCOM_SPI_CTRLA_DOPO(dopo)
                     | SERCOM_SPI_CTRLA_DIPO(dipo)
                     | MSB_FIRST << SERCOM_SPI_CTRLA_DORD_Pos;

      //Setting the CTRLB register
      spi->CTRLB.reg = SERCOM_SPI_CTRLB_CHSIZE(SPI_CHAR_SIZE_8_BITS)
                      | SERCOM_SPI_CTRLB_RXEN; //Active the SPI receiver.

      while ( spi->SYNCBUSY.bit.CTRLB == 1 );

      return {};
    }

    void release(int sercom_index)
    {
      if ((size_t)sercom_index >= SERCOM_INST_NUM) { return; }

      auto sercom_data = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercom_data->sercomPtr);

      auto *spi = &sercom->SPI;
      while (spi->SYNCBUSY.bit.ENABLE); //Waiting then enable bit from SYNCBUSY is equal to 0;
      spi->CTRLA.bit.ENABLE = 0;        //Setting the enable bit to 0

      resetSPI(spi);
    }

    void beginTransaction(int sercom_index, uint32_t freq, int spi_mode)
    {
      auto sercomData = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);

      while (sercom->SPI.SYNCBUSY.bit.ENABLE) {}
      sercom->SPI.CTRLA.bit.ENABLE = 0;

      //Extract data from clockMode
      sercom->SPI.CTRLA.bit.CPHA = spi_mode & 1;
      sercom->SPI.CTRLA.bit.CPOL = (spi_mode >> 1) & 1;
      sercom->SPI.BAUD.reg = FreqToClockDiv(freq);

      sercom->SPI.CTRLA.bit.ENABLE = 1;
      while (sercom->SPI.SYNCBUSY.bit.ENABLE) {}
    }

    void endTransaction(int sercom_index)
    {
    }

    void writeBytes(int sercom_index, const uint8_t* data, size_t length)
    {
      auto sercomData = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto *spi = &sercom->SPI;
      do
      {
        spi->DATA.reg = *data++;
        while (spi->INTFLAG.bit.DRE == 0);
      } while (--length);
      while (!spi->INTFLAG.bit.TXC);
    }

    void readBytes(int sercom_index, uint8_t* data, size_t length)
    {
      auto sercom_data = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercom_data->sercomPtr);
      auto *spi = &sercom->SPI;
      
      while (spi->INTFLAG.bit.RXC) { uint32_t tmp = spi->DATA.reg; (void)tmp; }
      do
      {
        spi->DATA.reg = *data;
        while (!spi->INTFLAG.bit.RXC);
        *data++ = (spi->DATA.reg & 0xFF);
      } while (--length);
    }

    cpp::result<void, error_t> init(int sercom_index, int pin_sda, int pin_scl)
    {
      if ((size_t)sercom_index >= SERCOM_INST_NUM) { return cpp::fail(error_t::invalid_arg); }

      int pad_sda;
      int pad_scl;
      int alt = 0;
      do
      {
        pad_sda = getPadNumber(sercom_index, pin_sda, alt);
        pad_scl = getPadNumber(sercom_index, pin_scl, alt);
        if (pad_sda == 0 && pad_scl == 1) break;
      } while (++alt < 2);
      if (alt == 2) { return cpp::fail(error_t::invalid_arg); }

// Serial.printf("sercom:%d scl:%d  sda:%d \r\n", sercom_index, pin_scl, pin_sda);
// Serial.printf("pad scl:%d / pad sda:%d \r\n", pad_scl, pad_sda);

      auto sercomData = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto *i2cm = &sercom->I2CM;


      uint_fast8_t id_core = sercomData->id_core;
      uint_fast8_t id_slow = sercomData->id_slow;
      GCLK->PCHCTRL[id_core].bit.CHEN = 0;     // Disable timer
      GCLK->PCHCTRL[id_slow].bit.CHEN = 0;     // Disable timer
      uint32_t gclk_reg_value = GCLK_PCHCTRL_CHEN | SERCOM_CLOCK_SOURCE_48M << GCLK_PCHCTRL_GEN_Pos;
      while (GCLK->PCHCTRL[id_core].bit.CHEN || GCLK->PCHCTRL[id_slow].bit.CHEN);  // Wait for disable
      GCLK->PCHCTRL[id_core].reg = gclk_reg_value;
      GCLK->PCHCTRL[id_slow].reg = gclk_reg_value;


      // resetWIRE
      i2cm->CTRLA.bit.SWRST = 1;
      while (i2cm->CTRLA.bit.SWRST || i2cm->SYNCBUSY.bit.SWRST);

      // set master mode
      i2cm->CTRLA.reg =  SERCOM_I2CM_CTRLA_MODE( I2C_MASTER_OPERATION );

// I2C Master and Slave modes share the ENABLE bit function.

      // Enable the I2C master mode
      i2cm->CTRLA.bit.ENABLE = 1 ;
      while ( i2cm->SYNCBUSY.bit.ENABLE != 0 ) {}

      // Setting bus idle mode
      i2cm->STATUS.bit.BUSSTATE = 1 ;
      while ( i2cm->SYNCBUSY.bit.SYSOP != 0 ) {}
//*/
      pinAssignPeriph(pin_scl, alt ? PIO_SERCOM_ALT : PIO_SERCOM);
      pinAssignPeriph(pin_sda, alt ? PIO_SERCOM_ALT : PIO_SERCOM);

//Serial.println("lgfx i2c init success");
      return {};
    }

    cpp::result<void, error_t> release(int sercom_index)
    {
      if ((size_t)sercom_index >= SERCOM_INST_NUM) { return cpp::fail(error_t::invalid_arg); }

      auto sercomData = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);

      sercom->I2CM.CTRLA.bit.ENABLE = 0 ;
      while ( sercom->I2CM.SYNCBUSY.bit.ENABLE != 0 ) {}
/*
      auto sercomData = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto i2cm = &(sercom->I2CM);

      i2cm->CTRLA.bit.ENABLE = 0;
      while ( i2cm->SYNCBUSY.bit.ENABLE != 0 );
//*/
      return {};
    }

    cpp::result<void, error_t> restart(int sercom_index, int i2c_addr, uint32_t freq, bool read)
    {
      if ((size_t)sercom_index >= SERCOM_INST_NUM) { return cpp::fail(error_t::invalid_arg); }

      auto sercomData = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto i2cm = &(sercom->I2CM);
/*
Serial.println("restart");
  i2cm->CTRLA.bit.ENABLE = 0 ;
  while ( i2cm->SYNCBUSY.bit.ENABLE ) {}
Serial.println("restart 1");
sercom3.initMasterWIRE(freq);
Serial.println("restart 2");

  i2cm->CTRLA.bit.ENABLE = 1 ;

  while ( i2cm->SYNCBUSY.bit.ENABLE ) {}

  // Setting bus idle mode
  i2cm->STATUS.bit.BUSSTATE = 1 ;

  while ( i2cm->SYNCBUSY.bit.SYSOP ) {}
Serial.println("restart 3");

if (sercom3.startTransmissionWIRE(i2c_addr, read ? WIRE_READ_FLAG : WIRE_WRITE_FLAG))
{
Serial.println("restart:ok");
  return {};
}
Serial.println("restart:fail");
return cpp::fail(error_t::connection_lost);
/*/

      if (i2c_context[sercom_index].freq != freq
       || i2c_context[sercom_index].state == i2c_context_t::state_t::state_disconnect)
      {
        i2c_context[sercom_index].freq = freq;

        // disable
        i2cm->CTRLA.bit.ENABLE = 0;
        while ( i2cm->SYNCBUSY.bit.ENABLE ) {}

        // reset
        i2cm->CTRLA.bit.SWRST = 1;
        while (i2cm->CTRLA.bit.SWRST || i2cm->SYNCBUSY.bit.SWRST) {}

  // Synchronous arithmetic baudrate
#if defined(__SAMD51__)
        i2cm->BAUD.bit.BAUD = SERCOM_FREQ_REF / ( 2 * freq ) - 1 ;
#else
        i2cm->BAUD.bit.BAUD = SystemCoreClock / ( 2 * baudrate) - 5 - (((SystemCoreClock / 1000000) * WIRE_RISE_TIME_NANOSECONDS) / (2 * 1000));
#endif
        // enable
      // set master mode
        i2cm->CTRLA.reg = SERCOM_I2CM_CTRLA_MODE( I2C_MASTER_OPERATION ) | SERCOM_I2CM_CTRLA_ENABLE;

        //i2cm->CTRLA.bit.ENABLE = 1;
        while ( i2cm->SYNCBUSY.bit.ENABLE ) {}

        // Setting bus idle mode
        i2cm->STATUS.bit.BUSSTATE = 1 ;

        while ( i2cm->SYNCBUSY.bit.SYSOP ) {}
      }

      while (i2cm->STATUS.bit.BUSSTATE != WIRE_IDLE_STATE
          && i2cm->STATUS.bit.BUSSTATE != WIRE_OWNER_STATE) {}

      // Send start and 7-bits address + 1-bits R/W
      i2cm->ADDR.bit.ADDR = (i2c_addr << 0x1ul) | read;

      i2c_context[sercom_index].wait_ack = !read;
      i2c_context[sercom_index].state = read ? i2c_context_t::state_t::state_read : i2c_context_t::state_t::state_write;

/*
      // Address Transmitted
      if ( !read ) // Write mode
      {
        while( !i2cm->INTFLAG.bit.MB ) {}
      }
      else  // Read mode
      {
        while( !i2cm->INTFLAG.bit.SB )
        {
          if (i2cm->INTFLAG.bit.MB) {
            i2cm->CTRLB.bit.CMD = WIRE_MASTER_ACT_STOP; // Stop condition
Serial.println("restart:fail");
            return cpp::fail(error_t::connection_lost);
          }
        }
        // Clean the 'Slave on Bus' flag, for further usage.
        //sercom->I2CM.INTFLAG.bit.SB = 0x1ul;
      }

      //ACK received (0: ACK, 1: NACK)
      if(sercom->I2CM.STATUS.bit.RXNACK)
      {
Serial.println("restart:fail");
        return cpp::fail(error_t::connection_lost);
      }
Serial.println("restart:ok");
//*/
      return {};
//*/
    }

    cpp::result<void, error_t> beginTransaction(int sercom_index, int i2c_addr, uint32_t freq, bool read)
    {
      if ((size_t)sercom_index >= SERCOM_INST_NUM) { return cpp::fail(error_t::invalid_arg); }
/*
      auto sercomData = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto i2cm = &(sercom->I2CM);
      // Wait idle or owner bus mode
      while ( i2cm->STATUS.bit.BUSSTATE != WIRE_IDLE_STATE
           && i2cm->STATUS.bit.BUSSTATE != WIRE_OWNER_STATE);
 Serial.println("beginTrans DEBUG 1");
//*/
      i2c_context[sercom_index].state = i2c_context_t::state_t::state_disconnect;

      return restart(sercom_index, i2c_addr, freq, read);
    }

    cpp::result<void, error_t> endTransaction(int sercom_index)
    {
      return i2c_wait(sercom_index, true);

/*
      if ((size_t)sercom_index >= SERCOM_INST_NUM) { return cpp::fail(error_t::invalid_arg); }
      auto sercomData = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto i2cm = &(sercom->I2CM);
      cpp::result<void, error_t> res = {};

      i2cm->CTRLB.bit.CMD = WIRE_MASTER_ACT_STOP; // Stop condition
      //res = cpp::fail(error_t::connection_lost);
      while (sercom->I2CM.SYNCBUSY.bit.SYSOP) {};
      return res;
//*/
    }

    cpp::result<void, error_t> writeBytes(int sercom_index, const uint8_t *data, size_t length)
    {
      if ((size_t)sercom_index >= SERCOM_INST_NUM) { return cpp::fail(error_t::invalid_arg); }

      auto sercomData = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto i2cm = &(sercom->I2CM);
      cpp::result<void, error_t> res = {};
      do
      {
        auto d = *data++;
        res = i2c_wait(sercom_index);
        if (res.has_error()) break;
        //Send data
        i2cm->DATA.bit.DATA = d;
        i2c_context[sercom_index].wait_ack = true;
      } while (--length);
      return res;
    }

    cpp::result<void, error_t> readBytes(int sercom_index, uint8_t *data, size_t length, bool last_nack = false)
    {
      if ((size_t)sercom_index >= SERCOM_INST_NUM) { return cpp::fail(error_t::invalid_arg); }

      auto res = i2c_wait(sercom_index);
      if (res.has_error()) { return res; }

      auto sercomData = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto i2cm = &(sercom->I2CM);
      i2cm->CTRLB.bit.ACKACT = 0b0;
      while (length --)
      {
        i2cm->CTRLB.bit.ACKACT = (0 == length) && last_nack;   // Prepare Acknowledge
        while( i2cm->INTFLAG.bit.SB == 0 ) {};
        *data++ = i2cm->DATA.bit.DATA;

        i2cm->CTRLB.bit.CMD = WIRE_MASTER_ACT_READ;     // Prepare the ACK command for the slave
        while (i2cm->SYNCBUSY.bit.SYSOP) {}
      }
      return {};
/*
Serial.println("i2c::readBytes");
      cpp::result<void, error_t> res = {};
      do
      {
        while ( !sercom->I2CM.INTFLAG.bit.SB )
        {
          if (sercom->I2CM.INTFLAG.bit.MB)
          {
Serial.println("read fail");
            sercom->I2CM.CTRLB.bit.CMD = WIRE_MASTER_ACT_STOP; // Stop condition
            res = cpp::fail(error_t::connection_lost);
            break;
          }
        }
        if (res.has_error()) break;

        // Receive data
        *data++ = i2cm->DATA.bit.DATA;

        // Send ACK
        i2cm->CTRLB.bit.ACKACT = 0;

        // Next Read
        i2cm->CTRLB.bit.CMD = WIRE_MASTER_ACT_READ; // read command

        while (i2cm->SYNCBUSY.bit.SYSOP)
        {
          // Waiting for synchronization
        }

      } while (--length);

      return res;
//*/
    }
