==> rosmo/m5paper-ovstops/components/LovyanGFX/src/lgfx/v1/platforms/esp8266/common.cpp <==
#include "../common.hpp"
 #include <SPI.h>

  void pinMode(int_fast16_t pin, pin_mode_t mode)
  {
    switch (mode)
    {
    case pin_mode_t::output:
      ::pinMode(pin, OUTPUT);
      break;

#if defined (INPUT_PULLUP)
    case pin_mode_t::input_pullup:
      ::pinMode(pin, INPUT_PULLUP);
      break;
#endif
#if defined (INPUT_PULLDOWN)
    case pin_mode_t::input_pulldown:
      ::pinMode(pin, INPUT_PULLDOWN);
      break;
#endif
#if defined (INPUT_PULLDOWN_16)
    case pin_mode_t::input_pulldown:
      ::pinMode(pin, INPUT_PULLDOWN_16);
      break;
#endif

    default:
      ::pinMode(pin, INPUT);
      break;
    }
  }

    cpp::result<void, error_t> init(int spi_host, int spi_sclk, int spi_miso, int spi_mosi)
    {
#if defined ( ARDUINO )
      SPI.pins(spi_sclk, spi_miso, spi_mosi, -1);
      SPI.begin();
#endif
/*
    if (spi_sclk == 6
     && spi_miso == 7
     && spi_mosi == 8)
    {
     // pinSet = SPI_PINS_HSPI_OVERLAP;
    } else
    if (spi_sclk == 14
     && spi_miso == 12
     && spi_mosi == 13)
    {
        pinSet = SPI_PINS_HSPI;
    }
    else
    {
      return false;
    }
    //*/

      return {};
    }

    void release(int spi_host)
    {
#if defined ( ARDUINO )
      SPI.end();
#endif
    }

    void beginTransaction(int spi_host, uint32_t freq, int spi_mode)
    {
#if defined ( ARDUINO )
      SPI.setFrequency(freq);
      SPI.setBitOrder(MSBFIRST);
      SPI.setDataMode(spi_mode);
#endif
      SPI1U &= ~(SPIUMISO | SPIUDUPLEX);
    }

    void beginTransaction(int spi_host)
    {
      SPI1U &= ~(SPIUMISO | SPIUDUPLEX);
    }

    void endTransaction(int spi_host)
    {
      while (SPI1CMD & SPIBUSY);
#if defined ( ARDUINO )
      SPI.endTransaction();
#endif
      SPI1U |= SPIUDUPLEX;
    }

    void writeBytes(int spi_host, const uint8_t* data, size_t length)
    {
      const uint32_t u1 = ((length << 3) - 1) << SPILMOSI;
      while (SPI1CMD & SPIBUSY);
      SPI1U1 = u1;
      memcpy_P(reinterpret_cast<void*>(SPI1W0), data, length);
      SPI1CMD = SPIBUSY;
    }

    void readBytes(int spi_host, uint8_t* data, size_t length)
    {
      const uint32_t u1 = ((length << 3) - 1) << SPILMISO;
      while (SPI1CMD & SPIBUSY);
      SPI1U1 = u1;
      memcpy(reinterpret_cast<void*>(SPI1W0), data, length);
      SPI1CMD = SPIBUSY;
      while (SPI1CMD & SPIBUSY) {}
      memcpy(data, reinterpret_cast<void*>(SPI1W0), length);
    }

    cpp::result<void, error_t> init(int i2c_port, int pin_sda, int pin_scl)
    {
      if (i2c_port >= I2C_NUM_MAX) { return cpp::fail(error_t::invalid_arg); }
      auto i2c = &i2c_context[i2c_port];

      pinMode(pin_sda, pin_mode_t::input_pullup);
      pinMode(pin_scl, pin_mode_t::input_pullup);
      i2c->nopwait = 32;
      i2c->pin_scl = pin_scl;
      i2c->pin_sda = pin_sda;
      i2c->write_stop();

      return {};
    }

    cpp::result<void, error_t> release(int i2c_port)
    {
      return {};
    }

    cpp::result<void, error_t> restart(int i2c_port, int i2c_addr, uint32_t freq, bool read)
    {
      if (i2c_port >= I2C_NUM_MAX) { return cpp::fail(error_t::invalid_arg); }
      auto i2c = &i2c_context[i2c_port];

      if (i2c->freq != freq)
      {
        i2c->freq = freq;
        int tmp = (500000000 / freq);  // half-cycle period in ns
        int overhead = 280;
        int div = 40630;
        if (esp_get_cpu_freq_mhz() >= 160) // 160MHz
        {
          div >>= 1;
          overhead >>= 1;
        }
        i2c->nopwait = (1000 * std::max(0, tmp - overhead)) / div; // (half cycle - overhead) / busywait loop time
      }

      if (i2c->write_start()
       && i2c->write_byte((i2c_addr << 1 ) + read))
      {
        return {};
      }
      return cpp::fail(error_t::connection_lost);
    }

    cpp::result<void, error_t> beginTransaction(int i2c_port, int i2c_addr, uint32_t freq, bool read)
    {
      return restart(i2c_port, i2c_addr, freq, read);
    }

    cpp::result<void, error_t> endTransaction(int i2c_port)
    {
      if (i2c_port >= I2C_NUM_MAX) { return cpp::fail(error_t::invalid_arg); }
      auto i2c = &i2c_context[i2c_port];

      if (i2c->write_stop())
      {
        return {};
      }
      return cpp::fail(error_t::connection_lost);
    }

    cpp::result<void, error_t> writeBytes(int i2c_port, const uint8_t *data, size_t length)
    {
      if (i2c_port >= I2C_NUM_MAX) { return cpp::fail(error_t::invalid_arg); }
      auto i2c = &i2c_context[i2c_port];
      if (length)
      {
        do
        {
          if (!i2c->write_byte(*data++))
          {
            return cpp::fail(error_t::connection_lost);
          }
        } while (--length);
      }
      return {};
    }

    cpp::result<void, error_t> readBytes(int i2c_port, uint8_t *data, size_t length, bool last_nack)
    {
      if (i2c_port >= I2C_NUM_MAX) { return cpp::fail(error_t::invalid_arg); }
      auto i2c = &i2c_context[i2c_port];
      while (length--)
      {
        *data++ = i2c->read_byte(last_nack && length == 0);
      }
      return {};
    }
